重写停车场详情布局